Modified the date on the "Create Test" page as well as on the "User Guide" page. Minor changes to the user guide texts. Added formatting to paragraphs, lists and buttons inside tables. Moved some lines in the style file.
- Corrected the date on the "Create Test" page to August 18, 2024, and modified it on the "User Guide" page.
- Modified the note text to change the number of questions from "While selecting the checkbox" to "After selecting the checkbox".
- Corrected a character in the introduction text "Add questions to the created test".
- Modified the note text "Click the Create Test button if a test is displayed" (and also modified the paragraph text of the user's desire to delete a question) to address the user specifically.
- Set the navigation menu margin to 0.
- Corrected the targeting of navigation menu items.
- Added the formatting of navigation menu links.
- Moved the headings and links formatting lines from after the body formatting lines to after the main section formatting lines.
- Added the paragraph and list formatting after the links formatting.
- Added the button formatting within tables.

--- a/site/create-test.html
+++ b/site/create-test.html
@@ -28,7 +28,7 @@
   <main>
 
     <h1>إنشاء اختبار</h1>
-    <p>آخر تحديث: السبت، 16 أغسطس 2024.</p>
+    <p>آخر تحديث: الأحد، 18 أغسطس 2024.</p>
     <p>يمكنك إنشاء الاختبارات من هذه الصفحة. تفضل بزيارة <a href="user-guide.html">دليل المستخدم</a> إذا احتجت إلى تفاصيل أي خطوة موضحة هنا.</p>
 
     <section>
