--- a/site/user-guide.html
+++ b/site/user-guide.html
@@ -28,7 +28,7 @@
   <main>
 
     <h1>دليل المستخدم - مختبر القرآن الكريم</h1>
-    <p>آخر تحديث: السبت، 17 أغسطس 2024.</p>
+    <p>آخر تحديث: الأحد، 18 أغسطس 2024.</p>
     <p>مرحبًا بك في "مختبر القرآن الكريم". يتيح لك الموقع إنشاء اختبارات عشوائية من القرآن الكريم بسهولة ويسر.<br>
       في هذا الدليل، سنقوم بشرح الميزات المتاحة وكيفية استخدامها.</p>
 
@@ -42,7 +42,7 @@
         <li>حدد نطاق الآيات الذي تريد تضمينه من سورة النهاية المحددة عن طريق إدخال رقم آية البداية في حقل <strong>من آية</strong> وإدخال رقم آية النهاية في حقل <strong>إلى آية</strong>. (كما في سورة البداية) يكون رقم آية البداية هو 1 بشكل افتراضي، ويكون رقم آية النهاية هو رقم آخر آية في سورة النهاية المحددة بشكل افتراضي أيضا. يحدث ذلك حتى إذا كانا حقلَا نطاق الآيات فارغَين. يتم تغيير نطاق الآيات عند تغيير سورة النهاية حسب نطاق آيات السورة المحددة.</li>
         <li>أدخل اسم الطالب في حقل <strong>اسم الطالب</strong> لاستخدامه إذا أردت حفظ الاختبار في مستند Word.</li>
         <li>أدخل عدد الأسئلة التي ترغب في تضمينها في الاختبار في حقل <strong>عدد الأسئلة</strong>.</li>
-        <li>يمكنك تخصيص نطاق السور والآيات لكل سؤال على حدة عن طريق تحديد <strong>تخصيص كل سؤال على حدة</strong>. ستظهر لك عناوين لتخصيص كل سؤال حسب عدد الأسئلة التي أدخلتها قبل تحديد مربع الاختيار. ملاحظة: إذا غيرت عدد الأسئلة أثناء تحديد مربع الاختيار، فيلزمك إعادة التحديد مرة أخرى لتخصيص عدد الأسئلة الجديد.</li>
+        <li>يمكنك تخصيص نطاق السور والآيات لكل سؤال على حدة عن طريق تحديد <strong>تخصيص كل سؤال على حدة</strong>. ستظهر لك عناوين لتخصيص كل سؤال حسب عدد الأسئلة التي أدخلتها قبل تحديد مربع الاختيار. ملاحظة: إذا غيرت عدد الأسئلة بعد تحديد مربع الاختيار، فيلزمك إعادة التحديد مرة أخرى لتخصيص عدد الأسئلة الجديد.</li>
         <li>انقر على زر <strong>إنشاء اختبار</strong> لإنشاء الاختبار.</li>
       </ol>
 
@@ -58,8 +58,8 @@
       <h2>إضافة أسئلة إلى الاختبار المنشأ</h2>
       <p>بعد إنشاء الاخببار، يظهر زر <strong>إضافة أسئلة</strong> تحت العنوان <strong>قائمة الأسئلة</strong> تلقائيا. يمكنك من خلاله إضافة أسئلة إلى الاختبار الذي أنشأته. يأخذ عدد الأسئلة من العدد الموجود في حقل <strong>عدد الأسئلة</strong>، والذي يمكنك تغييره بالطبع؛ لإضافة العدد الذي تريده.</p>
       <p>يختفي زر <strong>إضافة أسئلة</strong> تلقائيا عند حذف جميع أسئلة الاختبار المعروض، أو عندما لا تكون هناك أسئلة معروضة.</p>
-      <p>ملاحظة: عند النقر على زر <strong>إنشاء اختبار</strong> في حال وجود اختبار معروض، يتم عرض تأكيد يسأل المستخدم عن الاستمرار في إنشاء اختبار جديد رغم وجود اختبار بالفعل، ويخبره بأن الاختبار الحالي سيتم حذفه.<br>
-        إذا قام المستخدم بالتأكيد، يتم حذف الاختبار الحالي وإنشاء واحد جديد بالقيم الموجودة وقتها في الحقول. إذا قام المستخدم بالإلغاء أو الرجوع، لا يتم فعل أي شيء.</p>
+      <p>ملاحظة: عند النقر على زر <strong>إنشاء اختبار</strong> في حال وجود اختبار معروض، يتم عرض تأكيد يسألك عن الاستمرار في إنشاء اختبار جديد رغم وجود اختبار بالفعل، ويخبرك بأن الاختبار الحالي سيتم حذفه.<br>
+        إذا قمت بالتأكيد، فسيتم حذف الاختبار الحالي وإنشاء واحد جديد بالقيم الموجودة وقتها في الحقول. إذا قمت بالإلغاء أو الرجوع، فلن يتم فعل أي شيء.</p>
     </section>
 
     <section>
@@ -75,7 +75,7 @@
         <li><strong>نطاق الآيات:</strong> يمكنك تحديد نطاق الآيات داخل كل سورة لتكون جزءًا من الأسئلة.</li>
         <li><strong>عدد الأسئلة ونطاقاتها:</strong> يمكنك تحديد العدد المطلوب من الأسئلة في كل اختبار. يمكنك تخصيص نطاق كل سؤال على حدة؛ لإنشاء اختبار شامل.</li>
         <li><strong>التحكم في الأسئلة:</strong> يمكنك تغيير أي سؤال من الأسئلة المعروضة بآخر. يأخذ نطاقاته من الحقول العادية، أو من حقول تخصيصه إذا كان مخصصا.<br>
-          يمكنك أيضا حذف أي سؤال من أسئلة الاختبار المعروض حاليا، ويتم إعادة ترقيم الأسئلة الباقية تلقائيا. عند رغبة المستخدم في الحذف يظهر له تأكيد بذلك مع رقم السؤال الذي يريد حذفه.</li>
+          يمكنك أيضا حذف أي سؤال من أسئلة الاختبار المعروض حاليا، ويتم إعادة ترقيم الأسئلة الباقية تلقائيا. عند رغبتك في الحذف يظهر لك تأكيد بذلك مع رقم السؤال الذي تريد حذفه.</li>
       </ul>
     </section>
 
